--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,9 @@ Temporary Items
 # Ignore Gradle GUI config
 gradle-app.setting
 
+# Local Gradle Properties
+gradle-local.properties
+
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
