--- a/project-a/build.gradle
+++ b/project-a/build.gradle
@@ -3,16 +3,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.6.RELEASE'
 }
 
-sourceCompatibility = 1.8
+apply from: "${rootProject.projectDir}/gradle/artifactory.gradle"
 
-repositories {
-    jcenter()
-    mavenCentral()
-}
+sourceCompatibility = 1.8
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootDependenciesVersion}"
+        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootBomVersion}"
     }
 }
 
