--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -1,35 +1,52 @@
-plugins.withType(JavaPlugin) {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
-    // Build Source Jars
-    def sourcesJarMap = [name: 'sourcesJar', type: Jar, dependsOn: classes]
-    project.tasks.create(sourcesJarMap, {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    })
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
-    // Build Javadoc Jars
-    def javadocJarMap = [name: 'javadocJar', type: Jar, dependsOn: javadoc]
-    project.tasks.create(javadocJarMap, {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    })
+// Build Source Jars
+def sourcesJarMap = [name: 'sourcesJar', type: Jar, dependsOn: classes]
+project.tasks.create(sourcesJarMap, {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+    version = "${project.version}"
+})
 
-    artifacts {
-        archives sourcesJar
-        archives javadocJar
+// Build Javadoc Jars
+def javadocJarMap = [name: 'javadocJar', type: Jar, dependsOn: javadoc]
+project.tasks.create(javadocJarMap, {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+    version = "${project.version}"
+})
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+jar {
+    version = "${project.version}"
+}
+
+// Integration Testing
+sourceSets {
+    integration {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration/java')
+        }
+        resources.srcDir file('src/integration/resources')
     }
+}
 
-    // Integration Testing
-    sourceSets {
-        integration {
-            java {
-                compileClasspath += main.output + test.output
-                runtimeClasspath += main.output + test.output
-                srcDir file('src/integration/java')
-            }
-            resources.srcDir file('src/integration/resources')
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
