--- a/project-b/build.gradle
+++ b/project-b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.6.RELEASE'
 }
 
+apply from: "${rootProject.projectDir}/gradle/java.gradle"
+apply from: "${rootProject.projectDir}/gradle/artifactory.gradle"
+
 sourceCompatibility = 1.8
 
 dependencyManagement {
