--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildScan {
 subprojects {
     apply plugin: 'net.saliman.properties'
 
+    // Adds a version qualifier to the end of the version (i.e. SNAPSHOT, RC)
     project.version += rootProject.hasProperty('versionQualifier') ? '-' + rootProject.property('versionQualifier') : ''
 
     repositories {
