--- a/gradle/maven.gradle
+++ b/gradle/maven.gradle
@@ -1,3 +1,13 @@
+/*
+ * Release using the Maven Release Plugin
+ *
+ * Requires you set the following Gradle properties:
+ *
+ *   1. artifactoryBaseUrl - Url of Artifactory (http://artifactory.mydomain.com)
+ *   2. artifactoryUsername - Username of Artifactory deployer
+ *   3. artifactoryPassword - Password of Artifactory deployer
+ */
+
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
